--- a/session-results-unit-test/session-results-unit-test.vcxproj.filters
+++ b/session-results-unit-test/session-results-unit-test.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="session-results-unit-test.rc">
+      <Filter>Файлы ресурсов</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
