Реализована функция определения длительности сессии

--- a/session/session.vcxproj
+++ b/session/session.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="file_reader.cpp" />
     <ClCompile Include="filter.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="process.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="data.txt" />
@@ -151,6 +152,7 @@
     <ClInclude Include="constants.h" />
     <ClInclude Include="file_reader.h" />
     <ClInclude Include="filter.h" />
+    <ClInclude Include="processing.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
